# protobuf

./: .gitignore  CMakeLists.txt  README.md  main.cpp
proto/: bbox.proto
